issues has been fixed!

--- a/membership-final-test.html
+++ b/membership-final-test.html
@@ -718,6 +718,7 @@
                             </div>
                           </div>
 
+
                           <div>
                             <hr>
 
@@ -856,9 +857,9 @@
 
                             <div class="alert alert-secondary bg-white">
                               <div class="callout callout-info mb-2">
-                                <p class="text-medium font-600 m-0">Read <a href="#" data-bs-toggle="modal"
-                                                                            data-bs-target="#modal-waiver">Code of
-                                  Conduct</a></p>
+                                <p class="text-medium font-600 m-0">Read
+                                  <a href="#" data-bs-toggle="modal" data-bs-target="#modal-waiver">Code of Conduct</a>
+                                </p>
                               </div>
 
                               <div class="callout callout-info mb-2">
@@ -958,39 +959,12 @@
         </div>
         <div class="modal-body">
           <div class="py-2 px-sm-3 px-md-4">
-            <p>ICGC Youth is a community-based organization providing youth based programs for the
-              muslim community in cincinnati. Participation in the organization’s programs is subject
-              to the observance of the organization’s rules and procedures. The activities outlined
-              below are strictly prohibited. Any participant who violates this Code is subject to
-              discipline, up to and including removal from the program.</p>
+            <embed src="https://res.cloudinary.com/secure-api/image/upload/v1670245873/sunday-school/al-ilm/misc-documents/st4irj014djieqohupkb.pdf"
+                   width="100%"
+                   height="600"
+                   frameborder="0"
+                   allowfullscreen>
 
-            <ul>
-              <li>Youth participants must refrain from engaging in any type of violence,
-                bullying, harassment, or abusive behavior towards adults and peers.</li>
-              <li>Youth participants must refrain from the possession or use of alcoholic
-                beverages, illegal drugs, explosives, firearms, weapons or other similar items on
-                ICGC’s property.</li>
-              <li>Youth participants must respect, adhere to the rules of, and follow the
-                instructions given to them by a counselor, facilitator or leader. (Group facilitator,
-                counselor, youth coordinators, volunteer, etc.).</li>
-              <li>Youth participants must show kindness and respect to the people around
-                them (their peers, community elders, group leaders, counselors, etc.) and
-                their surrounding environment (masjid property, classroom, field trip
-                facilities, etc.)</li>
-            </ul>
-            <h4 class="font-600">Action Steps</h4>
-            <ol>
-              <li>1st Strike: Report to Youth Coordinator - Parents are notified of infraction.</li>
-              <li>2nd Strike: Parent and participant meeting with staff & Youth Coordinator</li>
-              <li>3rd Strike: Suspension from program</li>
-              <li>Reinstatement Process: Parent & participant meeting with staff and Youth Coordinator.</li>
-            </ol>
-
-            <p class="font-600">
-              I have read and I understand the ICGC Youth Code of Conduct. I agree to abide by the
-              rules described above and understand that I may be removed as a participant if I violate
-              any of these rules.
-            </p>
           </div>
         </div>
         <div class="modal-footer">
@@ -1012,39 +986,12 @@
         </div>
         <div class="modal-body">
           <div class="py-2 px-sm-3 px-md-4">
-            <p>ICGC Youth is a community-based organization providing youth based programs for the
-              muslim community in cincinnati. Participation in the organization’s programs is subject
-              to the observance of the organization’s rules and procedures. The activities outlined
-              below are strictly prohibited. Any participant who violates this Code is subject to
-              discipline, up to and including removal from the program.</p>
+            <embed src="https://res.cloudinary.com/secure-api/image/upload/v1670245873/sunday-school/al-ilm/misc-documents/st4irj014djieqohupkb.pdf"
+                   width="100%"
+                   height="600"
+                   frameborder="0"
+                   allowfullscreen>
 
-            <ul>
-              <li>Youth participants must refrain from engaging in any type of violence,
-                bullying, harassment, or abusive behavior towards adults and peers.</li>
-              <li>Youth participants must refrain from the possession or use of alcoholic
-                beverages, illegal drugs, explosives, firearms, weapons or other similar items on
-                ICGC’s property.</li>
-              <li>Youth participants must respect, adhere to the rules of, and follow the
-                instructions given to them by a counselor, facilitator or leader. (Group facilitator,
-                counselor, youth coordinators, volunteer, etc.).</li>
-              <li>Youth participants must show kindness and respect to the people around
-                them (their peers, community elders, group leaders, counselors, etc.) and
-                their surrounding environment (masjid property, classroom, field trip
-                facilities, etc.)</li>
-            </ul>
-            <h4 class="font-600">Action Steps</h4>
-            <ol>
-              <li>1st Strike: Report to Youth Coordinator - Parents are notified of infraction.</li>
-              <li>2nd Strike: Parent and participant meeting with staff & Youth Coordinator</li>
-              <li>3rd Strike: Suspension from program</li>
-              <li>Reinstatement Process: Parent & participant meeting with staff and Youth Coordinator.</li>
-            </ol>
-
-            <p class="font-600">
-              I have read and I understand the ICGC Youth Code of Conduct. I agree to abide by the
-              rules described above and understand that I may be removed as a participant if I violate
-              any of these rules.
-            </p>
           </div>
         </div>
         <div class="modal-footer">
@@ -1065,8 +1012,15 @@
         </div>
         <div class="modal-body">
           <div class="pt-2 pb-4">
-            <p class="secure-alert text-medium font-600 m-0 mb-3 text-center text-success"><img src="assets/images/icon_shield.png" alt="secure by sectigo"> Secured by SECTIGO</p>
-            <h4 class="text-center font-600">You are about authorize <span class="font-bold">$<span class="amount-to-authorize">600</span></span> </h4>
+
+            <div class="membership-alert">
+              <p class="text-center text-medium font-600 m-0">Your Membership for <span class="text-uppercase">"<span class="membership-name"></span>"</span> is being completed!</p>
+            </div>
+
+            <div class="is-payment-confirm pt-3 d-none">
+              <p class="secure-alert text-medium font-600 m-0 mb-3 text-center text-success"><img src="assets/images/icon_shield.png" alt="secure by sectigo"> Secured by SECTIGO</p>
+              <h4 class="text-center font-600">You are about authorize <span class="font-bold">$<span class="amount-to-authorize">600</span></span> </h4>
+            </div>
           </div>
 
         </div>
